# VanillaDbtGcpVenom

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  local_deploy_dbt.sh  local_deploy_terraform.sh  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-test.txt  requirements.txt  test_call_cloud_run.py
.github/workflows/: backend.build.yaml
app/: app.py  generate_doc_openapi.py  gunicorn_config.py
app/dbt_vanilla/: dbt_project.yml  profiles.yml  script.sh
app/dbt_vanilla/models/: schema.yml  sources.yml
app/dbt_vanilla/models/staging/: cleaned_games_post_wide.sql  cleaned_schedules.sql
app/dbt_vanilla/models/warehouse/: incremental_example.sql
app/routers/: dbt.py
terraform/: artifactory.tf  backend.tf  cloud_scheduler.tf  cloudrun_v1.tf  dataset.tf  provider.tf  variable.tf
