[tool.poetry]
name = "vanilladbtgcpvenom"
version = "0.1.0"
description = ""
authors = ["JojoBizarreVenom <jonathan@venom.engineering>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
dbt-bigquery = "^1.8.2"
fastapi = "^0.112.2"
dbt-core = "^1.8.6"
uvicorn = {extras = ["standard"], version = "^0.30.6"}
gunicorn = "^23.0.0"
loguru = "^0.7.2"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"
black = "^24.8.0"
isort = "^5.13.2"
bandit = "^1.7.9"
pylint = "^3.2.7"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
